# flyme

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml
client-lib/: Cargo.toml
client-lib/examples/: usage.rs
client-lib/src/: lib.rs
client/examples/: basic.rs  cli.rs
client/src/: client.rs  lib.rs  main.rs
common/: Cargo.toml
common/src/: config.rs  lib.rs  mod.rs  platform_socket.rs  tls_stream.rs
fake-client/: Cargo.toml  README.md
fake-client/src/: main.rs
scripts/: generate_test_certs.sh  test_integration.sh
server/: Cargo.toml  README.md  build.rs
server/examples/: basic.rs  daemon.rs  echo.rs
server/src/: lib.rs  main.rs  peer_creds.rs
shared/: Cargo.toml
shared/src/: config.rs  lib.rs
