[workspace]
members = ["server", "client", "client-lib", "fake-client", "shared"]
resolver = "2"

[workspace.dependencies]
interprocess = "2.2"
rustls = "0.23"
rustls-native-certs = "0.7"
rustls-pemfile = "2.1"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }



[profile.release]
opt-level = 3
lto = true
