[package]
name = "client-lib"
version = "0.1.0"
edition = "2024"

[lib]
name = "client_lib"
path = "src/lib.rs"

[dependencies]
shared = { path = "../shared" }
interprocess = { workspace = true }
rustls = { workspace = true }
rustls-native-certs = { workspace = true }
rustls-pemfile = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
