[package]
name = "client"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "client"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
client-lib = { path = "../client-lib" }
log = { workspace = true }
env_logger = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
