[package]
name = "server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
interprocess = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[build-dependencies]
